Revert font back to Menlo
SF Mono is not available in apps apparently

--- a/base64/Base.lproj/Main.storyboard
+++ b/base64/Base.lproj/Main.storyboard
@@ -721,7 +721,7 @@
                                                 <fragment content="Hello">
                                                     <attributes>
                                                         <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                        <font key="NSFont" size="12" name="SFMono-Regular"/>
+                                                        <font key="NSFont" size="12" name="Menlo-Regular"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                     </attributes>
                                                 </fragment>
